# IGUANE

./: LICENSE  README.md  iguane.py  pyproject.toml
data/mila/: 2020_S1.json  2020_S2.json  2020_S3.json  2021_S1.json  2021_S2.json  2021_S3.json  2022_S2.json  2022_S3.json  2023_S1.json  2023_S3.json  2024_S1.json  2024_S3.json
iguane/: __main__.py  fom.py  log.py  rawdata.toml
tests/: test_rgu.py
tests/test_rgu/: test_rgu_v1_1_0_.txt  test_rgu_v1_1_0_renorm_.txt
