[tool.poetry]
name = "iguane"
version = "0.1.0"
description = "A tool to explore Figures-of-Merit for some GPUs"
authors = ["Olexa Bilaniuk"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-regressions = "^2.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
